fix panel on mobile

--- a/_info.scss
+++ b/_info.scss
@@ -101,7 +101,7 @@
 
     }
 
-    .info {
+    .info2 {
         margin: 25px;
         font-size: 30px;
     }
@@ -140,7 +140,7 @@
 
     }
 
-    .info {
+    .info2 {
         margin: 30px;
         font-size: 30px;
     }
